Actualizo correccion del navegador

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#historia">Historia</a></li>
+                    <li><a href="#productos">Productos</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#testimonios">Testimonios</a></li>
                 </ul>
             </nav>
         </div>
@@ -97,7 +99,7 @@
     </section>
 
     <!-- Story Section -->
-    <section class="story">
+    <section class="story" id="historia">
         <div class="container">
             <div class="story-content">
                 <div class="story-text">
@@ -232,7 +234,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section class="testimonials">
+    <section class="testimonials" id="testimonios">
     <div class="container">
         <h2 class="product-title">Lo Que Dicen Nuestras Clientas</h2>
 
