--- a/index.html
+++ b/index.html
@@ -8,28 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="logo">MISS SARIA WALLET</div>
-            <div class="tagline">Cuero Lavable • Diseño Único • Aromas de Marca • Impacto Social</div>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#historia">Historia</a></li>
-                    <li><a href="#productos">Productos</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="#testimonios">Testimonios</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <header class="header" id="inicio">
+    <div class="container">
+        <div class="logo">MISS SARIA WALLET</div>
+        <div class="tagline">Cuero Lavable • Diseño Único • Aromas de Marca • Impacto Social</div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#historia">Historia</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#testimonios">Testimonios</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
 
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Los Accesorios y Fragancias que Cambiarán tu Vida</h1>
+            <p><h1>Los Accesorios y Fragancias que Cambiarán tu Vida</h1></p>
             <p>Descubre la perfecta combinación entre elegancia, funcionalidad y sofisticación. Cada cartera y cada perfume cuentan una historia de calidad excepcional y cuidado en la selección de marcas reconocidas, para que tu estilo y personalidad brillen al máximo.</p>
             <a href="#productos" class="cta-primary">¡Quiero la Mía Ahora!</a>
         </div>
@@ -714,6 +713,16 @@ document.addEventListener('DOMContentLoaded', () => {
             }
         }
     });
+});
+
+// Hacer que el header se vuelva más compacto al hacer scroll
+window.addEventListener('scroll', () => {
+    const header = document.querySelector('.header');
+    if (window.scrollY > 100) {
+        header.classList.add('scrolled');
+    } else {
+        header.classList.remove('scrolled');
+    }
 });
     </script>
 </body>
