Actualizo correccion del navegador

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="tagline">Cuero Lavable • Diseño Único • Aromas de Marca • Impacto Social</div>
         <nav class="navbar">
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#inicio2">Inicio</a></li>
                 <li><a href="#historia">Historia</a></li>
                 <li><a href="#productos">Productos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
                 <li><a href="#testimonios">Testimonios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </div>
@@ -26,7 +26,7 @@
 
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero" id="inicio2">
         <div class="container">
             <p><h1>Los Accesorios y Fragancias que Cambiarán tu Vida</h1></p>
             <p>Descubre la perfecta combinación entre elegancia, funcionalidad y sofisticación. Cada cartera y cada perfume cuentan una historia de calidad excepcional y cuidado en la selección de marcas reconocidas, para que tu estilo y personalidad brillen al máximo.</p>
