--- a/index.html
+++ b/index.html
@@ -357,6 +357,15 @@
         </div>
     </div>
 
+    <a href="https://wa.me/593968266607" class="floating-cta">💬 ¡WhatsApp!</a>
+
+    <!-- Modal para ver imagen ampliada -->
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <div class="modal-content">
+            <img id="modalImage" src="" alt="Imagen ampliada" class="modal-image">
+        </div>
+    </div>
     <!-- Efecto de ola del mouse -->
     <div class="wave-container">
         <div class="wave"></div>
